Fix layer selection after removing a node

See a comment in KisLayerBox::slotAboutToRemoveRows()

Fixes T1871
BUG:345601